[package]
name = "cargo-rclean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
cargo = "0.58.0"
clap = { version = "3.0.6", features = ["derive"] }
crossbeam = { version = "0.8.1", features = ["std"] }
log = "0.4.14"
