[package]
name = "cargo-rclean"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
cargo = "0.92.0"
clap = { version = "3.0.6", features = ["derive", "suggestions", "color"]}
crossbeam = { version = "0.8.1", features = ["std"] }
env_logger = "0.9.0"
itertools = "0.10.3"
log = "0.4.14"
